unpackaged/main/default/objects/TNP_PhoneMap__c/TNP_PhoneMap__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TNP_PhoneMap</label>
</CustomObject>