unpackaged/main/default/objects/TNP_PhoneMap__c/fields/Phone1Type_pc__c.field-meta.xml
<CustomField>
    <fullName>Phone1Type_pc__c</fullName>
    <label>Phone1Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>