unpackaged/main/default/objects/TNP_PhoneMap__c/fields/Phone2Type_pc__c.field-meta.xml
<CustomField>
    <fullName>Phone2Type_pc__c</fullName>
    <label>Phone2Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>