unpackaged/main/default/objects/TNP_PhoneMap__c/fields/Phone3_pc__c.field-meta.xml
<CustomField>
    <fullName>Phone3_pc__c</fullName>
    <label>Phone3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>