unpackaged/main/default/objects/TNP_PhoneMap__c/fields/Phone3Type_pc__c.field-meta.xml
<CustomField>
    <fullName>Phone3Type_pc__c</fullName>
    <label>Phone3Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>