unpackaged/main/default/objects/TNP_PhoneMap__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>