unpackaged/main/default/objects/TNP_PhoneMap__c/fields/WeChat_pc__c.field-meta.xml
<CustomField>
    <fullName>WeChat_pc__c</fullName>
    <label>WeChat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>